--- a/assets/style.css
+++ b/assets/style.css
@@ -90,9 +90,11 @@ nav {
 
 }
 .image-carousel{
-  height:60px;
   left:0px;
   right:0px;
+  width: 100%;
+  margin-top: 10%;
+  position: fixed;
 }
 .input-section {
 
