Expanding width of carousel to expand to full width of browser

--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,13 @@ nav {
   margin-top: 10%;
   position: fixed;
 }
+
+#myCarousel{
+  width:100%;
+}
+.carousel-inner>.item>img {
+  width:100%;
+}
 .input-section {
 
 }
