--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color:white;
   width: 100%;
   height: 100%;
 }
@@ -12,6 +11,16 @@ header {
   z-index: 10000;
   background-color: white;
 }
+
+h2{
+  font-family: 'Playfair Display', serif;
+  font-size: 25px;
+}
+
+p{
+  font-family: 'Playfair Display', serif;
+}
+
 .main-nav {
   display: flex;
   justify-content: space-around;
@@ -118,27 +127,45 @@ nav {
 }
 .review-section{
   background-color: white;
-  display: grid;
- grid-column-gap: 50px;
- grid-row-start: 1;
- grid-row-end: 3;
- display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 10px;
-  background-color: #2196F3;
   padding: 10px;
 }
-.lower-section {
+
+.review-section h2 {
+  font-size: 25px;
+  text-align: left;
+}
+caption>a {
   caption-side: bottom;
-  width: 100%;
+}
+.lower-section h4{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .lower-section img{
-  width: 20%;
-  height: 20%;
+  max-width: 50%;
+  border: solid;
+  border-width: medium;
+  border-color: white;
 }
 .product-ranges {
   display: flex;
   flex-direction: row;
+  padding: 10px;
+}
+.get-inspired{
+  display: flex;
+  flex-direction: row;
+  margin-top:15px;
+}
+.learn-more{
+  display: flex;
+  flex-direction: row;
+}
+.learn-more img {
+  max-width: 50%;
+  border: solid;
+  border-width: medium;
+  border-color: white;
 }
 .mission-statement{
   max-width: 100%;
